# simple-raycast

./: CMakeLists.txt  README.md  main.cpp
include/: Player.h  Raycast.h  color.h  conf.h  map.h  utils.h
src/: Player.cpp  Raycast.cpp  map.c  map.cpp
